# haveibeenpwnd

./: .gitignore  .travis.yml  AUTHORS  ChangeLog  LICENSE  README.md  pypi-description.rst  pytest.ini  setup.cfg  test-requirements.txt  tox.ini
haveibeenpwnd/: __init__.py  main.py
tests/: resources.py  test_hibp.py
