[metadata]
name = haveibeenpwnd
author = Berend Kapelle
author_email = berend.kapelle@gmail.com
home-page = http://github.com/berend/hibp
license = MIT
summary = Check passwords against HaveIBeenPwnd
description-file = README.md

classifier =
  Development Status :: 4 - Beta
  License :: OSI Approved :: MIT License
  Intended Audience :: Developers
  Topic :: Security
  Operating System :: OS Independent
  Programming Language :: Python
  Programming Language :: Python :: 2
  Programming Language :: Python :: 2.7
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.4
  Programming Language :: Python :: 3.5
  Programming Language :: Python :: 3.6

[files]
packages = haveibeenpwnd

[wheel]
universal = 1